--- a/media-queries.css
+++ b/media-queries.css
@@ -1,21 +1,21 @@
-@media screen and (max-width: 375px) {
-	:root {
-		--fontSize: 7.5px;
-	}
-}
-@media screen and (max-width: 600px) {
-	:root {
-		--fontSize: 17px;
+@media (max-height: 650px) and (max-width: 375px) {
+	.card {
+		height: 70%;
 	}
 	body {
-		height: 100vh;
+		height: 150vh;
 		width: 100vw;
 		position: relative;
 		background-color: var(--veryDarkBlue);
 	}
+}
+@media screen and (max-width: 600px) {
+	:root {
+		--fontSize: 10px;
+	}
 	.card {
 		height: 80%;
-		width: 95%;
+		width: 90%;
 		grid-template-columns: 100%;
 		grid-template-rows: 30% auto;
 	}
@@ -63,6 +63,10 @@
 		justify-content: space-evenly;
 		align-items: center;
 		justify-content: center;
+		text-align: center;
+	}
+	.wrapper section {
+		margin-bottom: 50px;
 	}
 	header {
 		margin-bottom: 15px;
